# roa-ticket-tracker

./: .gitignore  Dockerfile  README.md
api/: .env  Dockerfile  compare.py  compare_old.py  compare_per_show.py  db.py  dependencies.py  format_sold.py  main.py  pyproject.toml  serve.py  services.py  settings.py  shows.json  temp.json
api/services/: norticservice.py  ticketservice.py
backend/: SPAService.py  main.py  pyproject.toml  shows.json
collector/: .dockerignore  Dockerfile  collector.sh  db.py  main.py  mongo-init.js  pyproject.toml  runmongo.sh  service.py  settings.py  worker.py
collector/ARCHIVE/: roa.tickets.DAILY.json  roa.tickets.PIPELINE.mongosh
elm-frontend/: elm.js  index.html
elm-frontend/src/: Main.elm
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/components/: BaseList.jsx  CountdownTimer.jsx
runtime/: .gitignore  crontab  docker-compose.yaml
ui/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
ui/public/: manifest.json
ui/src/: App.vue  App2.vue  index.css  main.js  style.css
ui/src/components/: CountdownTimer.vue  ExternalMedia.vue  HistoryGraph.vue  LoadSpinner.vue  Panel.vue  ShowList.vue  ShowListItem.vue  TabButton.vue
ui/src/router/: index.js
ui/src/views/: ExternalView.vue  IndexView.vue
