[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Mikael Ivarsson <mikael.ivarsson4@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.2"
gunicorn = "^20.1.0"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
pymongo = "^4.3.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
