[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Mikael Ivarsson <mikael.ivarsson4@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.1"
gunicorn = "^20.1.0"
uvicorn = {extras = ["standard"], version = "^0.21.1"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
